--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,14 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@font-face {
+  font-family: "googleSans";
+  src: url("./assets/fonts/googleSans/GoogleSans-Regular.ttf");
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "googleSans";
+}
+a {
+  text-decoration: none;
+  color: #000;
 }
