--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -17,3 +17,17 @@
 .custom-hover:hover {
   background-color: #5a9bdc75 !important;
 }
+.custom-checkbox {
+  -webkit-appearance: none;
+  appearance: none;
+  border: 1px solid #000;
+  background-color: #fff;
+  width: 20px;
+  height: 20px;
+}
+.custom-checkbox:checked {
+  background-image: url("../../assets/images/checked.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
